[package]
name = "routefinder"
version = "0.5.2"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "router"
readme = "README.md"
repository = "https://github.com/jbr/routefinder"
documentation = "https://docs.rs/routefinder"
license = "MIT OR Apache-2.0"
keywords = ["router"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
smartcow = "0.2.0"
smartstring = "1.0.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
