[package]
name = "routefinder"
version = "0.5.5"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "router"
readme = "README.md"
repository = "https://github.com/jbr/routefinder"
documentation = "https://docs.rs/routefinder"
license = "MIT OR Apache-2.0"
keywords = ["router"]
categories = ["web-programming::http-server", "web-programming"]

[features]
default = []
memchr = ["dep:memchr"]
log = ["dep:log"]

[dependencies]
log = { version = "0.4.27", optional = true }
memchr = { version = "2.7.4", optional = true }
smartcow = "0.2.1"
smartstring = "1.0.1"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
env_logger = "0.11.8"
test-harness = "0.3.1"

[[bench]]
name = "bench"
harness = false
